[tool.poetry]
name = "distalk-googletranslation-tts"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
PyNaCl = "^1.5.0"
static-ffmpeg = "^2.3"
"discord.py" = "^2.1.0"
Flask = "^2.2.2"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
